# guitar2midi

./: .gitignore  CMakeLists.txt  fftrunner.cpp  fftrunner.h  main.cpp  maths.cpp  maths.hpp  sdl_utils.cpp  sdl_utils.h  test.cpp  utils.cpp  utils.hpp
